--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.2.3",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-camera": "~12.2.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
