--- a/app.json
+++ b/app.json
@@ -8,8 +8,8 @@
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "cover",
+      "backgroundColor": "#707070"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
