--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
