--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.3",
-    "expo": "~45.0.0",
-    "expo-app-loading": "~2.0.0",
-    "expo-camera": "~12.2.0",
-    "expo-font": "~10.1.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "expo": "^46.0.0",
+    "expo-app-loading": "~2.1.0",
+    "expo-camera": "~12.3.0",
+    "expo-font": "~10.2.0",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.18.6"
   },
   "private": true
 }
