--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-updates": "~0.14.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
