--- a/eas.json
+++ b/eas.json
@@ -1,13 +1,18 @@
 {
   "cli": {
-    "version": ">= 0.34.0"
+    "version": ">= 2.0.0"
+  },
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
+    "preview": {
+      "distribution": "internal"
+    },
+    "production": {}
   },
   "submit": {
-    "production": {
-      "ios": {
-        "appleId": "soryankumar@yahoo.com",
-        "appleTeamId": "V8C4QDND38"
-      }
-    }
+    "production": {}
   }
 }
