--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.3",
+    "eas-cli": "^0.49.0",
     "expo": "^46.0.0",
     "expo-app-loading": "~2.1.0",
     "expo-camera": "~12.3.0",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
@@ -27,8 +29,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-web": "~0.18.7",
-    "expo-updates": "~0.14.5"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
