--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "eyecheck",
   "version": "1.0.2",
   "main": "node_modules/expo/AppEntry.js",
+  "android": {
+    "versionCode": 2,
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
