--- a/app.json
+++ b/app.json
@@ -26,9 +26,9 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#f5f5f5"
       },
-      "package": "com.skumar12.EyeCheck"
+      "package": "com.skumar12.EyeCheck",
+      "versionCode": 2
     },
-    "versionCode": 2,
     "web": {
       "favicon": "./assets/favicon.png"
     },
