--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eyecheck",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -16,23 +16,28 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.3",
     "eas-cli": "^0.49.0",
-    "expo": "^46.0.0",
-    "expo-app-loading": "~2.1.0",
-    "expo-camera": "~12.5.0",
-    "expo-font": "~10.2.0",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.7",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.9",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "expo": "^50.0.17",
+    "expo-camera": "~14.1.3",
+    "expo-font": "~11.10.3",
+    "expo-splash-screen": "~0.26.5",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
+  },
+  "overrides": {
+    "expo-modules-autolinking": "~1.10.0",
+    "@expo/config-plugins": "^7.8.0",
+    "@expo/prebuild-config": "^6.7.0"
   },
   "private": true
 }
